...
export const problemsData: FeatureCollection<Point, GeoJsonProperties> = {
  "type": "FeatureCollection",
  "features": [
    {
      "type": "Feature",
      "properties": {
        "name": "The Shallow",
        "grade": "V0",
        "subarea": "Forestland",
        "topo": "forestland-cube-crack",
        "order": "1",
        "line": "[[315,278],[287,217],[345,154],[319,81]]",
        "description": "Climb the tall face. Highball.",
        "color": "black"
...
        ]
      }
    },
    {
      "type": "Feature",
      "properties": {
        "name": "Cube Crack",
        "grade": "V0",
        "subarea": "Forestland",
        "topo": "forestland-cube-crack",
        "order": "2",
        "line": "[[130,307],[187,86]]",
        "description": "Climb the tall crack. Highball.",
...
        ]
      }
    },
    {
      "type": "Feature",
      "properties": {
        "name": "The Cube",
        "grade": "V3",
        "subarea": "Forestland",
        "topo": "forestland-cube",
        "order": "3",
        "line": "[[291, 328], [354, 202], [383, 132], [377, 88]]",
        "description": "Work up crimps to a committing move to a jug. Highball.",
...
