...

  return (
    <HStack className={`${!showPreviousButton() ? "justify-end" : "justify-between"} w-full px-2`}>
      {showPreviousButton() && (
        <Button
          onPress={handlePreviousProblem}
          testID="circuit-previous-problem"
          accessibilityLabel="Previous circuit problem"
          action="secondary"
          className="bg-typography-0/50 rounded-full w-12 h-12"
        >
          <ButtonIcon as={ChevronLeftIcon} size="lg" color={color} />
        </Button>
      )}

      {showNextButton() && (
        <Button
          onPress={handleNextProblem}
          testID="circuit-next-problem"
          accessibilityLabel="Next circuit problem"
          action="secondary"
          className="bg-typography-0/50 rounded-full w-12 h-12"
        >
          <ButtonIcon as={ChevronRightIcon} size="lg" color={color} />
        </Button>
...
