import { Text } from '@/components/ui/text';
import { View } from 'react-native';

export default function AboutScreen() {
  return (
    <View className="flex-1 items-center justify-center bg-white">
      <Text>About</Text>
    </View>
  );
}
