...
          placeholder="Search areas..."
          value={searchTerm}
          onChangeText={setSearchTerm}
        />
      }
    >
      <SheetHeader title="Select area" onClose={onClose} closeButtonTestID="close-area-picker" />
      <Divider />
      <ScrollView className="flex-1 pt-4 pl-6 pr-7" showsVerticalScrollIndicator={false}>
        <RadioGroup value={currentArea} className="gap-6 py-2" onChange={handleAreaSelect}>
          {filteredAreas.map(area => (
            <Radio
              key={area}
...
